# rrj

./: .gitignore  Dockerfile  LICENSE  README.md
cca/ddutil/: cleanup.sh  common.sh  eval_rrj.py  filt_merges.py  merge_delta.py  merge_results.py  mx.py  mx1.py  rrj.py  rx.py  shutdown_virtuoso.py
cca/ontologies/2015/10/: java-refactoring.rdf  refactoring.rdf
cca/queries/refactoring/java/: change_field_type.rq  change_parameter_type.rq  change_return_type.rq  change_variable_type.rq  extract_variable.rq  inline_variable.rq  local_variable_rename.rq  rename_field.rq  rename_method.rq  rename_parameter.rq  weak_rename_method.rq
python/: README.md  setup.cfg
python/src/cca/dd/: common.py  conf.py  eval_rrj.py  filt_merges.py  find_refactoring.py  materialize_supplementary_fact.py  misc.py  mx.py  mx1.py  ref.py  ref_key_queries.py  ref_keys.py  rrj.py  rx.py  scan_oracle.py  setup_factbase.py  virtuoso_ini.py
