[metadata]
name = rrj
version = attr: cca.dd.__version__
url = https://github.com/mstmhsmt/rrj
author = Masatomo Hashimoto
author_email = m.hashimoto@stair.center
license = Apache-2.0
description = Helper scripts for RRJ
long_description = file: README.md

[options]
package_dir =
    =src
packages = find_namespace:
install_requires =
    cca

[options.packages.find]
where = src

